--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:url" content="">
     <meta property="og:image" content="/src/assets/images/favicon.ico">
 
-    <title>CV App</title>
+    <title>The Leader Board App</title>
   </head>
   <body class="font-regular">
     <div id="root"></div>
